test/Error/CheckPure/CannotPurify/Main.ds

-- Can't purify top-level effects.
--

list	= mapL print 
	["perch", "tetra", "cichlid"];

list2	= (\f x -> mapL f x) (\x -> print x) 
	["perch", "tetra", "cichlid"];

{-
-- Can't purity Write effects.
x
 = do {	a	= 5;
 	(:=)@ a 27; };
 	

-}
